@@ -1,5 +1,9 @@
 2002-05-18  Mikael Hallendal  <micke@codefactory.se>
 
+	* src/yelp-view-toc.c: 
+	(toc_start): fixed mem leak
+	(toc_scrollkeeper): fixed mem leak
+
 	* src/yelp-view-toc.h: don't include gtkhtml2 headers.
 
 	* src/yelp-view-toc.c: 
